<?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>atombeat</groupId>
  <artifactId>atombeat</artifactId>
  <packaging>war</packaging>
  <name>Atombeat</name>
  <version>0.001</version>
  <url>http://code.google.com/p/atombeat/</url>
  <build>
    <finalName>atombeat</finalName>
    <plugins>
      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <configuration>
          <contextPath>/</contextPath>
          <scanIntervalSeconds>2</scanIntervalSeconds>
          <scanTargets>
            <scanTarget>
             ${basedir}/src/main/java
            </scanTarget>
          </scanTargets>
        </configuration>
      </plugin>
      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
       <configuration>
        <source>1.6</source>
        <target>1.6</target>
       </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <webXml>war/WEB-INF/web.xml</webXml>
        </configuration>
      </plugin>    
     </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist</artifactId>
      <version>1.4.0</version>
      <classifier>orbeon_20100330</classifier>
    </dependency>
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-xmldb</artifactId>
      <version>1.4.0</version>
    </dependency>
    <dependency>
      <groupId>exist</groupId>
      <artifactId>exist-resolver</artifactId>
      <version>0.9.2</version>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-xmlrpc-client</artifactId>
      <version>3.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-xmlrpc-common</artifactId>
      <version>3.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-optional</artifactId>
      <version>1.4.0</version>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-versioning</artifactId>
      <version>1.4.0</version>
      <classifier>orbeon_20100330</classifier>
    </dependency>
    <dependency>
      <groupId>org.exist</groupId>
      <artifactId>exist-antlr</artifactId>
      <version>antlr-2.7.7</version>
    </dependency>

    <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring</artifactId>
     <version>2.5.6.SEC01</version>
     <scope>runtime</scope>
    </dependency> 
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>2.0.5.RELEASE</version>
    </dependency> 
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.12</version>
      <scope>compile</scope>
    </dependency>    
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>commons-pool</groupId>
      <artifactId>commons-pool</artifactId>
      <version>1.3</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
<!--
Modify catalina.sh if running tomcat as local user :

   export CATALINA_PID=/var/run/tomcat6.pid

   shift
  
  "$_RUNJAVA" $JAVA_OPTS \
    -Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" -classpath "$CLASSPATH" \
    -Dcatalina.base="$CATALINA_BASE" \
    -Dcatalina.home="$CATALINA_HOME" \
    -Djava.io.tmpdir="$CATALINA_TMPDIR" \
    org.apache.catalina.startup.Bootstrap "$@" stop

  if [ ! -z "$CATALINA_PID" ]; then
     echo "Killing: `cat $CATALINA_PID`"
     kill -9 `cat $CATALINA_PID`
     echo rm $CATALINA_PID
     rm $CATALINA_PID
  else
     echo "Kill failed: \$CATALINA_PID not set"
  fi

-->
    
      <id>tomcatRunning</id>
      <activation>
        <file>
          <exists>/var/run/tomcat6.pid</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven2-plugin</artifactId>
            <configuration>
              <wait>true</wait>
              <container>
                <containerId>tomcat6x</containerId>
                <type>remote</type>
              </container>
              <configuration>
                <type>runtime</type> 
                <properties>
                    <cargo.tomcat.manager.url>http://localhost:8080/manager</cargo.tomcat.manager.url>
                    <cargo.remote.username>admin</cargo.remote.username>
                    <cargo.remote.password />
                </properties>
              </configuration>
              <deployer>
               <type>remote</type>
               <deployables>
                 <deployable>
                    <groupId>${project.groupId}</groupId>
                    <artifactId>${project.artifactId}</artifactId>
                    <properties>
                      <context>/atombeat</context>
                    </properties>
                    <type>war</type>
                  </deployable>
                </deployables>
              </deployer>
            </configuration>
            <executions>
               <execution>
                 <id>do</id>
                 <phase>pre-integration-test</phase>
                 <goals>
                    <goal>deployer-redeploy</goal>
                 </goals>
               </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
